[project]
name = "master-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "asyncio>=4.0.0",
    "bs4>=0.0.2",
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "requests>=2.32.5",
]
