[project]
name = "master-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "asyncio>=4.0.0",
    "bs4>=0.0.2",
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "playwright>=1.57.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.2",
    "sentencepiece>=0.2.1",
    "torch>=2.10.0",
    "transformers>=4.57.6",
]
