[project]
name = "master-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "bs4>=0.0.2",
    "detoxify>=0.5.2",
    "emfdscore",
    "fastcoref>=2.1.6",
    "gensim>=4.4.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.2",
    "sentencepiece>=0.2.1",
    "shap>=0.51.0",
    "spacy>=3.8.11",
    "torch>=2.10.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.6",
]

[tool.uv.sources]
emfdscore = { git = "https://github.com/medianeuroscience/emfdscore" }
